# s3-file-service

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: action.yml
src/: aws.rs  handlers.rs  image_processing.rs  main.rs  rembg.rs  s3.rs
